fix labels getting cut off at smaller sizes

--- a/app/assets/stylesheets/cornell/_item-record.css.scss
+++ b/app/assets/stylesheets/cornell/_item-record.css.scss
@@ -47,6 +47,7 @@ dl.dl-horizontal {
 		color: $light-gray;
 		margin-right: 10px;
 		font-weight: normal;
+		overflow: visible;
 		text-overflow: inherit;
 		white-space: normal;
 		}
